--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sheikh Jabed",
   "license": "ISC",
-  "description": "",
+  "description": "This is Server Side of Coffee Store Project",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
